// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`メイン画面 E2E: Header (HeaderE235) スナップショット: デグレ検知用 新宿駅停車中(JA)のスナップショット 1`] = `
<ViewManagerAdapter_ExpoLinearGradient
  colors={
    [
      4280427042,
      4280361249,
    ]
  }
  style={
    {
      "flexDirection": "row",
      "height": 128,
      "overflow": "hidden",
      "paddingLeft": 24,
    }
  }
>
  <View
    style={
      {
        "flex": 0.3,
        "height": 128,
        "justifyContent": "center",
        "marginRight": 24,
        "position": "relative",
      }
    }
  >
    <View
      style={
        [
          {
            "justifyContent": "flex-end",
            "width": "100%",
          },
          {
            "marginTop": 0,
          },
        ]
      }
    >
      <Text
        adjustsFontSizeToFit={true}
        allowFontScaling={false}
        lineBreakStrategyIOS="push-out"
        numberOfLines={2}
        style={
          [
            {
              "color": "#333",
              "fontFamily": "Roboto_700Bold",
              "textAlignVertical": "center",
            },
            [
              {
                "color": "#fff",
                "fontWeight": "bold",
                "width": "100%",
              },
              {
                "fontSize": 49,
              },
            ],
            false,
          ]
        }
        textBreakStrategy="balanced"
      >
        有楽町
      </Text>
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#333",
              "fontFamily": "Roboto_700Bold",
              "textAlignVertical": "center",
            },
            [
              {
                "color": "#fff",
                "fontWeight": "bold",
                "textAlign": "right",
              },
              {
                "fontSize": 35,
              },
              null,
            ],
            false,
          ]
        }
      >
        方面
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "height": 120,
          "marginRight": 16,
          "width": 38,
        },
        {
          "backgroundColor": "#80C241",
        },
      ]
    }
  />
  <View
    style={
      {
        "flex": 1,
        "height": 128,
        "justifyContent": "flex-end",
        "position": "relative",
      }
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      allowFontScaling={false}
      numberOfLines={2}
      style={
        [
          {
            "color": "#333",
            "fontFamily": "Roboto_700Bold",
            "textAlignVertical": "center",
          },
          {
            "color": "#fff",
            "fontSize": 41,
            "fontWeight": "bold",
            "position": "absolute",
            "top": 12,
          },
          false,
        ]
      }
    />
    <View
      style={
        {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "marginBottom": 8,
        }
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
              "justifyContent": "center",
              "maxWidth": 82,
              "transform": [
                {
                  "scale": 0.7,
                },
              ],
            },
            {
              "transformOrigin": "bottom",
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#231e1f",
              "borderColor": "white",
              "borderRadius": 14,
              "borderWidth": 1,
              "paddingHorizontal": 4,
              "paddingVertical": 4,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#333",
                  "fontFamily": "Roboto_400Regular",
                  "textAlignVertical": "center",
                },
                {
                  "color": "white",
                  "fontFamily": "Frutiger Neue LT Pro",
                  "fontSize": 24,
                  "includeFontPadding": false,
                  "lineHeight": 24,
                  "textAlign": "center",
                },
                false,
              ]
            }
          >
            SJK
          </Text>
          <View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "white",
                    "borderRadius": 8,
                    "borderWidth": 7,
                    "flexDirection": "column",
                    "height": 72,
                    "justifyContent": "center",
                    "width": 72,
                  },
                  {
                    "borderColor": "#80C241",
                  },
                ]
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#333",
                      "fontFamily": "Roboto_400Regular",
                      "textAlignVertical": "center",
                    },
                    {
                      "color": "#231e1f",
                      "fontFamily": "Frutiger Neue LT Pro",
                      "fontSize": 24,
                      "lineHeight": 24,
                      "marginTop": 4,
                      "textAlign": "center",
                    },
                    false,
                  ]
                }
              >
                JY
              </Text>
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#333",
                      "fontFamily": "Roboto_400Regular",
                      "textAlignVertical": "center",
                    },
                    {
                      "color": "#231e1f",
                      "fontFamily": "Frutiger Neue LT Pro",
                      "fontSize": 32,
                      "lineHeight": 32,
                      "marginTop": -4,
                      "textAlign": "center",
                    },
                    false,
                  ]
                }
              >
                17
              </Text>
            </View>
          </View>
        </View>
      </View>
      <Text
        adjustsFontSizeToFit={true}
        allowFontScaling={false}
        numberOfLines={1}
        style={
          [
            {
              "color": "#333",
              "fontFamily": "Roboto_700Bold",
              "textAlignVertical": "center",
            },
            {
              "alignItems": "center",
              "color": "#fff",
              "flex": 1,
              "flexWrap": "wrap",
              "fontSize": 88,
              "fontWeight": "bold",
              "justifyContent": "center",
              "textAlign": "center",
            },
            false,
          ]
        }
      >
        新宿
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "position": "absolute",
          "right": "25%",
          "top": 8,
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#333",
            "fontFamily": "Roboto_400Regular",
            "textAlignVertical": "center",
          },
          [
            {
              "fontSize": 31,
              "fontWeight": "bold",
              "textAlign": "right",
            },
            {
              "color": "white",
              "fontWeight": "normal",
            },
          ],
          false,
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#333",
            "fontFamily": "Roboto_400Regular",
            "textAlignVertical": "center",
          },
          [
            {
              "fontSize": 31,
              "fontWeight": "bold",
              "textAlign": "right",
            },
            {
              "color": "white",
              "fontWeight": "normal",
            },
            {
              "opacity": 0,
            },
          ],
          false,
        ]
      }
    >
      :
    </Text>
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#333",
            "fontFamily": "Roboto_400Regular",
            "textAlignVertical": "center",
          },
          [
            {
              "fontSize": 31,
              "fontWeight": "bold",
              "textAlign": "right",
            },
            {
              "color": "white",
              "fontWeight": "normal",
            },
          ],
          false,
        ]
      }
    />
  </View>
</ViewManagerAdapter_ExpoLinearGradient>
`;

exports[`メイン画面 E2E: Header (HeaderE235) スナップショット: デグレ検知用 東京駅停車中(EN)のスナップショット 1`] = `
<ViewManagerAdapter_ExpoLinearGradient
  colors={
    [
      4280427042,
      4280361249,
    ]
  }
  style={
    {
      "flexDirection": "row",
      "height": 128,
      "overflow": "hidden",
      "paddingLeft": 24,
    }
  }
>
  <View
    style={
      {
        "flex": 0.3,
        "height": 128,
        "justifyContent": "center",
        "marginRight": 24,
        "position": "relative",
      }
    }
  >
    <View
      style={
        [
          {
            "justifyContent": "flex-end",
            "width": "100%",
          },
          {
            "marginTop": 0,
          },
        ]
      }
    >
      <Text
        adjustsFontSizeToFit={true}
        allowFontScaling={false}
        numberOfLines={1}
        style={
          [
            {
              "color": "#333",
              "fontFamily": "Roboto_700Bold",
              "textAlignVertical": "center",
            },
            [
              {
                "color": "#aaa",
                "fontWeight": "bold",
              },
              {
                "fontSize": 35,
              },
            ],
            false,
          ]
        }
      >
        Bound for
      </Text>
      <Text
        adjustsFontSizeToFit={true}
        allowFontScaling={false}
        lineBreakStrategyIOS="push-out"
        numberOfLines={2}
        style={
          [
            {
              "color": "#333",
              "fontFamily": "Roboto_700Bold",
              "textAlignVertical": "center",
            },
            [
              {
                "color": "#fff",
                "fontWeight": "bold",
                "width": "100%",
              },
              {
                "fontSize": 49,
              },
            ],
            false,
          ]
        }
        textBreakStrategy="balanced"
      >
        Tokyo
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "height": 120,
          "marginRight": 16,
          "width": 38,
        },
        {
          "backgroundColor": "#80C241",
        },
      ]
    }
  />
  <View
    style={
      {
        "flex": 1,
        "height": 128,
        "justifyContent": "flex-end",
        "position": "relative",
      }
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      allowFontScaling={false}
      numberOfLines={2}
      style={
        [
          {
            "color": "#333",
            "fontFamily": "Roboto_700Bold",
            "textAlignVertical": "center",
          },
          {
            "color": "#fff",
            "fontSize": 41,
            "fontWeight": "bold",
            "position": "absolute",
            "top": 12,
          },
          false,
        ]
      }
    />
    <View
      style={
        {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "marginBottom": 8,
        }
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
              "justifyContent": "center",
              "maxWidth": 82,
              "transform": [
                {
                  "scale": 0.7,
                },
              ],
            },
            {
              "transformOrigin": "bottom",
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#231e1f",
              "borderColor": "white",
              "borderRadius": 14,
              "borderWidth": 1,
              "paddingHorizontal": 4,
              "paddingVertical": 4,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#333",
                  "fontFamily": "Roboto_400Regular",
                  "textAlignVertical": "center",
                },
                {
                  "color": "white",
                  "fontFamily": "Frutiger Neue LT Pro",
                  "fontSize": 24,
                  "includeFontPadding": false,
                  "lineHeight": 24,
                  "textAlign": "center",
                },
                false,
              ]
            }
          >
            TYO
          </Text>
          <View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "white",
                    "borderRadius": 8,
                    "borderWidth": 7,
                    "flexDirection": "column",
                    "height": 72,
                    "justifyContent": "center",
                    "width": 72,
                  },
                  {
                    "borderColor": "#80C241",
                  },
                ]
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#333",
                      "fontFamily": "Roboto_400Regular",
                      "textAlignVertical": "center",
                    },
                    {
                      "color": "#231e1f",
                      "fontFamily": "Frutiger Neue LT Pro",
                      "fontSize": 24,
                      "lineHeight": 24,
                      "marginTop": 4,
                      "textAlign": "center",
                    },
                    false,
                  ]
                }
              >
                JY
              </Text>
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#333",
                      "fontFamily": "Roboto_400Regular",
                      "textAlignVertical": "center",
                    },
                    {
                      "color": "#231e1f",
                      "fontFamily": "Frutiger Neue LT Pro",
                      "fontSize": 32,
                      "lineHeight": 32,
                      "marginTop": -4,
                      "textAlign": "center",
                    },
                    false,
                  ]
                }
              >
                01
              </Text>
            </View>
          </View>
        </View>
      </View>
      <Text
        adjustsFontSizeToFit={true}
        allowFontScaling={false}
        numberOfLines={1}
        style={
          [
            {
              "color": "#333",
              "fontFamily": "Roboto_700Bold",
              "textAlignVertical": "center",
            },
            {
              "alignItems": "center",
              "color": "#fff",
              "flex": 1,
              "flexWrap": "wrap",
              "fontSize": 88,
              "fontWeight": "bold",
              "justifyContent": "center",
              "textAlign": "center",
            },
            false,
          ]
        }
      >
        Tokyo
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "position": "absolute",
          "right": "25%",
          "top": 8,
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#333",
            "fontFamily": "Roboto_400Regular",
            "textAlignVertical": "center",
          },
          [
            {
              "fontSize": 31,
              "fontWeight": "bold",
              "textAlign": "right",
            },
            {
              "color": "white",
              "fontWeight": "normal",
            },
          ],
          false,
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#333",
            "fontFamily": "Roboto_400Regular",
            "textAlignVertical": "center",
          },
          [
            {
              "fontSize": 31,
              "fontWeight": "bold",
              "textAlign": "right",
            },
            {
              "color": "white",
              "fontWeight": "normal",
            },
            {
              "opacity": 0,
            },
          ],
          false,
        ]
      }
    >
      :
    </Text>
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#333",
            "fontFamily": "Roboto_400Regular",
            "textAlignVertical": "center",
          },
          [
            {
              "fontSize": 31,
              "fontWeight": "bold",
              "textAlign": "right",
            },
            {
              "color": "white",
              "fontWeight": "normal",
            },
          ],
          false,
        ]
      }
    />
  </View>
</ViewManagerAdapter_ExpoLinearGradient>
`;

exports[`メイン画面 E2E: Header (HeaderE235) スナップショット: デグレ検知用 渋谷駅走行中(JA)のスナップショット 1`] = `
<ViewManagerAdapter_ExpoLinearGradient
  colors={
    [
      4280427042,
      4280361249,
    ]
  }
  style={
    {
      "flexDirection": "row",
      "height": 128,
      "overflow": "hidden",
      "paddingLeft": 24,
    }
  }
>
  <View
    style={
      {
        "flex": 0.3,
        "height": 128,
        "justifyContent": "center",
        "marginRight": 24,
        "position": "relative",
      }
    }
  >
    <View
      style={
        [
          {
            "justifyContent": "flex-end",
            "width": "100%",
          },
          {
            "marginTop": 0,
          },
        ]
      }
    >
      <Text
        adjustsFontSizeToFit={true}
        allowFontScaling={false}
        lineBreakStrategyIOS="push-out"
        numberOfLines={2}
        style={
          [
            {
              "color": "#333",
              "fontFamily": "Roboto_700Bold",
              "textAlignVertical": "center",
            },
            [
              {
                "color": "#fff",
                "fontWeight": "bold",
                "width": "100%",
              },
              {
                "fontSize": 49,
              },
            ],
            false,
          ]
        }
        textBreakStrategy="balanced"
      >
        有楽町
      </Text>
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#333",
              "fontFamily": "Roboto_700Bold",
              "textAlignVertical": "center",
            },
            [
              {
                "color": "#fff",
                "fontWeight": "bold",
                "textAlign": "right",
              },
              {
                "fontSize": 35,
              },
              null,
            ],
            false,
          ]
        }
      >
        方面
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "height": 120,
          "marginRight": 16,
          "width": 38,
        },
        {
          "backgroundColor": "#80C241",
        },
      ]
    }
  />
  <View
    style={
      {
        "flex": 1,
        "height": 128,
        "justifyContent": "flex-end",
        "position": "relative",
      }
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      allowFontScaling={false}
      numberOfLines={2}
      style={
        [
          {
            "color": "#333",
            "fontFamily": "Roboto_700Bold",
            "textAlignVertical": "center",
          },
          {
            "color": "#fff",
            "fontSize": 41,
            "fontWeight": "bold",
            "position": "absolute",
            "top": 12,
          },
          false,
        ]
      }
    >
      次は
    </Text>
    <View
      style={
        {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "marginBottom": 8,
        }
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
              "justifyContent": "center",
              "maxWidth": 82,
              "transform": [
                {
                  "scale": 0.7,
                },
              ],
            },
            {
              "transformOrigin": "bottom",
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#231e1f",
              "borderColor": "white",
              "borderRadius": 14,
              "borderWidth": 1,
              "paddingHorizontal": 4,
              "paddingVertical": 4,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#333",
                  "fontFamily": "Roboto_400Regular",
                  "textAlignVertical": "center",
                },
                {
                  "color": "white",
                  "fontFamily": "Frutiger Neue LT Pro",
                  "fontSize": 24,
                  "includeFontPadding": false,
                  "lineHeight": 24,
                  "textAlign": "center",
                },
                false,
              ]
            }
          >
            SBY
          </Text>
          <View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "white",
                    "borderRadius": 8,
                    "borderWidth": 7,
                    "flexDirection": "column",
                    "height": 72,
                    "justifyContent": "center",
                    "width": 72,
                  },
                  {
                    "borderColor": "#80C241",
                  },
                ]
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#333",
                      "fontFamily": "Roboto_400Regular",
                      "textAlignVertical": "center",
                    },
                    {
                      "color": "#231e1f",
                      "fontFamily": "Frutiger Neue LT Pro",
                      "fontSize": 24,
                      "lineHeight": 24,
                      "marginTop": 4,
                      "textAlign": "center",
                    },
                    false,
                  ]
                }
              >
                JY
              </Text>
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#333",
                      "fontFamily": "Roboto_400Regular",
                      "textAlignVertical": "center",
                    },
                    {
                      "color": "#231e1f",
                      "fontFamily": "Frutiger Neue LT Pro",
                      "fontSize": 32,
                      "lineHeight": 32,
                      "marginTop": -4,
                      "textAlign": "center",
                    },
                    false,
                  ]
                }
              >
                20
              </Text>
            </View>
          </View>
        </View>
      </View>
      <Text
        adjustsFontSizeToFit={true}
        allowFontScaling={false}
        numberOfLines={1}
        style={
          [
            {
              "color": "#333",
              "fontFamily": "Roboto_700Bold",
              "textAlignVertical": "center",
            },
            {
              "alignItems": "center",
              "color": "#fff",
              "flex": 1,
              "flexWrap": "wrap",
              "fontSize": 88,
              "fontWeight": "bold",
              "justifyContent": "center",
              "textAlign": "center",
            },
            false,
          ]
        }
      >
        渋谷
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "position": "absolute",
          "right": "25%",
          "top": 8,
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#333",
            "fontFamily": "Roboto_400Regular",
            "textAlignVertical": "center",
          },
          [
            {
              "fontSize": 31,
              "fontWeight": "bold",
              "textAlign": "right",
            },
            {
              "color": "white",
              "fontWeight": "normal",
            },
          ],
          false,
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#333",
            "fontFamily": "Roboto_400Regular",
            "textAlignVertical": "center",
          },
          [
            {
              "fontSize": 31,
              "fontWeight": "bold",
              "textAlign": "right",
            },
            {
              "color": "white",
              "fontWeight": "normal",
            },
            {
              "opacity": 0,
            },
          ],
          false,
        ]
      }
    >
      :
    </Text>
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#333",
            "fontFamily": "Roboto_400Regular",
            "textAlignVertical": "center",
          },
          [
            {
              "fontSize": 31,
              "fontWeight": "bold",
              "textAlign": "right",
            },
            {
              "color": "white",
              "fontWeight": "normal",
            },
          ],
          false,
        ]
      }
    />
  </View>
</ViewManagerAdapter_ExpoLinearGradient>
`;

exports[`メイン画面 E2E: LineBoard スナップショット: デグレ検知用 新宿駅 内回り YAMANOTE テーマのスナップショット 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    testID="LineBoardJO"
  >
    <View
      testID="lb-station-0"
    >
      <Text
        testID="lb-station-name-0"
      >
        新宿
      </Text>
      <Text
        testID="lb-station-roman-0"
      >
        Shinjuku
      </Text>
    </View>
    <View
      testID="lb-station-1"
    >
      <Text
        testID="lb-station-name-1"
      >
        新大久保
      </Text>
      <Text
        testID="lb-station-roman-1"
      >
        Shin-Okubo
      </Text>
    </View>
    <View
      testID="lb-station-2"
    >
      <Text
        testID="lb-station-name-2"
      >
        高田馬場
      </Text>
      <Text
        testID="lb-station-roman-2"
      >
        Takadanobaba
      </Text>
    </View>
    <View
      testID="lb-station-3"
    >
      <Text
        testID="lb-station-name-3"
      >
        目白
      </Text>
      <Text
        testID="lb-station-roman-3"
      >
        Mejiro
      </Text>
    </View>
    <View
      testID="lb-station-4"
    >
      <Text
        testID="lb-station-name-4"
      >
        池袋
      </Text>
      <Text
        testID="lb-station-roman-4"
      >
        Ikebukuro
      </Text>
    </View>
    <View
      testID="lb-station-5"
    >
      <Text
        testID="lb-station-name-5"
      >
        大塚
      </Text>
      <Text
        testID="lb-station-roman-5"
      >
        Otsuka
      </Text>
    </View>
    <View
      testID="lb-station-6"
    >
      <Text
        testID="lb-station-name-6"
      >
        巣鴨
      </Text>
      <Text
        testID="lb-station-roman-6"
      >
        Sugamo
      </Text>
    </View>
    <View
      testID="lb-station-7"
    >
      <Text
        testID="lb-station-name-7"
      >
        駒込
      </Text>
      <Text
        testID="lb-station-roman-7"
      >
        Komagome
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#80C241",
        }
      }
      testID="lb-line-color-0"
    />
    <View
      style={
        {
          "backgroundColor": "#80C241",
        }
      }
      testID="lb-line-color-1"
    />
    <View
      style={
        {
          "backgroundColor": "#80C241",
        }
      }
      testID="lb-line-color-2"
    />
    <View
      style={
        {
          "backgroundColor": "#80C241",
        }
      }
      testID="lb-line-color-3"
    />
    <View
      style={
        {
          "backgroundColor": "#80C241",
        }
      }
      testID="lb-line-color-4"
    />
    <View
      style={
        {
          "backgroundColor": "#80C241",
        }
      }
      testID="lb-line-color-5"
    />
    <View
      style={
        {
          "backgroundColor": "#80C241",
        }
      }
      testID="lb-line-color-6"
    />
    <View
      style={
        {
          "backgroundColor": "#80C241",
        }
      }
      testID="lb-line-color-7"
    />
  </View>
</View>
`;

exports[`メイン画面 E2E: LineBoard スナップショット: デグレ検知用 東京駅 外回り TOKYO_METRO テーマのスナップショット 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    testID="LineBoardEast"
  >
    <Text>
      LineBoardEast
    </Text>
  </View>
</View>
`;
